# AppleScript

./: CMakeLists.txt  README.md
docs/: applescript_manual.md
examples/: hello_world.apple  network_example.apple  threading_example.apple
include/: async.h  cli.h  codegen.h  error_handler.h  lexer.h  linker.h  logger.h  oop.h  optimizer.h  parser.h  sematic_analysis.h
include/arch/: arm.h  mips.h  x86.h
src/: CMakeLists.txt  main.cpp
src/core/: Makefile  ast.cpp  ast.h  async.cpp  async.h  async_usage.cpp  cli.cpp  cli.h  codegen.cpp  codegen.h  error_handler.cpp  lexer.cpp  lexer.h  linker.cpp  linker.h  logger.cpp  logger.h  oop.cpp  optimizer.cpp  optimizer.h  parser.cpp  parser.h  sematic_analisys.cpp  sematic_analisys.h  sematic_analysis.cpp
src/core/arch/: arm.cpp  arm.h  mips.cpp  mips.h  x86.cpp  x86.h
src/stdlib/: as_cloud.cpp  as_cloud.h  as_collection.cpp  as_multimedia.cpp  as_multimedia.h  as_network.cpp  as_network.h  as_stdio.cpp  as_sync.cpp  as_telegram.cpp  as_telegram.h  as_threading.cpp  as_threading.h
tests/: CMakeLists.txt  test_lexer.apple
